review job get started

--- a/dataframe.qmd
+++ b/dataframe.qmd
@@ -8,16 +8,16 @@ editor_options:
 
 [-@sec-data-structure] 장에서 R의 모든 기본 자료형과 자료구조에 대한 여행을 마쳤다.
 데이터 과학에서 수행하는 모든 작업은 [-@sec-data-structure] 장에서 소개한 도구를 조작하는 것이 된다.
-하지만, 거의 대부분 데이터 과학 프로젝트에서 진정한 스타는 **데이터프레임(dataframe)**이다. 
-CSV 파일에 정보를 불러와서 생성시킨 테이블을 지칭한다. 
-이번 장에서 데이터프레임으로 작업하는 방법에 대해 좀 더 상세히 살펴볼 것이다.
+하지만, 거의 대부분의 데이터 과학 프로젝트에서 진정한 스타는 **데이터프레임(dataframe)**이다. 
+CSV 파일에서 정보를 불러와 생성한 테이블을 지칭한다. 
+이번 장에서는 데이터프레임으로 작업하는 방법에 대해 좀 더 상세히 살펴본다.
 
 
 ## 행과 열 추가
 
 데이터프레임의 칼럼은 벡터라는 것을 배웠다.
 따라서, 데이터는 칼럼에서 자료형의 일관성을 유지해야 한다.
-이를테면, 칼럼을 새로 추가하려면 벡터를 새로 만들어서 시작한다.
+이를테면, 칼럼을 새로 추가하려면 벡터를 새로 만드는 것부터 시작한다.
 
 
 ### R {.unnumbered}
@@ -98,7 +98,7 @@ cats <- rbind(cats, newRow)
 R은 세 가지 수준 중 하나와 매칭되는 값만 받아들인다.
 완전 새로운 값을 추가하게 되면, 추가되는 신규 값은 `NA`가 된다.
 
-경고 메시지를 통해서 *coat* 요인변수에 "tortoiseshell" 값을 추가하는데 성공하지 못했다고 알려준다.
+경고 메시지를 통해서 *coat* 요인변수에 "tortoiseshell" 값을 추가하는 데 성공하지 못했다고 알려준다.
 하지만, 3.3 (숫자형), TRUE (논리형), 9 (숫자형)은 모두 *weight*, *likes_string*, *age* 변수에 
 성공적으로 추가된다. 왜냐하면 이 변수들이 요인형이 아니기 때문이다.
 "tortoiseshell"을 *coat* 요인변수에 성공적으로 추가하려면 요인의 수준(level)로 "tortoiseshell"을 추가하면 된다.
@@ -125,15 +125,15 @@ str(cats)
 ### 도전과제 
 
 1. `cats$age` 벡터에 7을 곱해서 `human_age` 벡터를 생성하자.
-2. `human_age`를 요인형으로 변환시키자.
-3. `as.numeric()` 함수를 사용해서 `human_age` 벡터를 다시 숫자형 벡터로 변환시킨다.
+2. `human_age`를 요인형으로 변환하자.
+3. `as.numeric()` 함수를 사용해서 `human_age` 벡터를 다시 숫자형 벡터로 변환한다.
    이제 7로 나눠서 원래 고양이 나이로 되돌리자. 무슨 일이 생겼는지 설명하자.
 
 ::: {.callout-caution collapse="true"}
 ### 해답
    
 1. `human_age <- cats$age * 7`
-2. `human_age <- factor(human_age)`. `as.factor(human_age)` 도 잘 동작한다.
+2. `human_age <- factor(human_age)`. `as.factor(human_age)`도 잘 동작한다.
 3. `as.numeric(human_age)`을 실행하면 `1 2 3 4 4`이 된다.
 
 왜냐하면 요인형 변수는 정수형(여기서 1:4)으로 자료를 저장하기 때문이다. 
@@ -141,7 +141,7 @@ str(cats)
 요인형 변수를 숫자형 벡터로 변환시키면 라벨이 아니라 그 밑단의 정수를 반환시킨다.
 원래 숫자를 원하는 경우, `human_age`를 문자형 벡터로 변환시키고 나서 숫자형 벡터로 변환시키면 된다. (왜 이 방식은 정상 동작할까?)
 실수로 숫자만 담긴 칼럼 어딘가에 문자가 포함된 csv 파일로 작업할 때 이런 일이 실제로 종종 일어난다.
-데이터를 불러 읽어올 때 `stringsAsFactors=FALSE` 설정을 잊지 말자.
+데이터를 불러올 때 `stringsAsFactors=FALSE` 설정을 잊지 말자.
 
 :::
 
@@ -151,7 +151,7 @@ str(cats)
 
 이제 데이터프레임에 행과 열을 추가하는 방법을 알게 되었다.
 하지만, 데이터프레임에 "tortoiseshell" 고양이를 처음으로 추가하면서 우연히 
-쓰레기 행을 추가시켰다. 데이터프레임에 문제가 되는 행을 마이너스 연산자를 사용해서 빼자.
+쓰레기 행을 추가시켰다. 데이터프레임에서 문제가 되는 행을 마이너스 연산자를 사용해서 제거하자.
 
 ```{webr-r}
 #| label: dataframe-remove-row
@@ -162,7 +162,7 @@ cats[-4, ]
 
 `-4,` 다음에 아무것도 지정하지 않아서 4번째 행 전체를 제거함에 주목한다.
 주목: 벡터 내부에 행 다수를 넣어 한번에 행을 제거할 수도 있다: `cats[c(-4,-5), ]`
-대안으로, `NA` 값을 갖는 모든 행을 제거시킨다.
+대안으로, `NA` 값을 갖는 모든 행을 제거한다.
 출력결과를 `cats`에 다시 대입하여 변경사항이 데이터프레임에 영구히 남도록 조치한다.
 
 ```{webr-r}
@@ -176,7 +176,7 @@ cats <- na.omit(cats)
 
 데이터프레임의 칼럼도 제거할 수 있다.
 "age" 칼럼을 제거하고자 한다면 어떻게 해야 할까?
-변수명과 변수 인덱스, 두가지 방식으로 칼럼을 제거할 수 있다.
+변수명과 변수 인덱스, 두 가지 방식으로 칼럼을 제거할 수 있다.
 
 ```{webr-r}
 #| label: dataframe-remove-column
@@ -202,6 +202,7 @@ cats[,!drop]
 cats <- rbind(cats, cats)
 cats
 ```
+
 하지만 이제 행 이름이 불필요하게 복잡해졌다. 
 행 이름을 제거하면 R이 자동으로 순차적인 이름을 다시 붙여준다.
 
@@ -255,7 +256,7 @@ df <- cbind(df, coffeetime = c(TRUE,TRUE))
 
 지금까지 고양이 데이터를 가지고 데이터프레임 조작에 대한 기본적인 사항을 살펴봤다.
 이제 학습한 기술을 사용해서 좀 더 현실적인 데이터셋을 다뤄보자.
-앞에서 다운로드 받은 `gapminder` 데이터셋을 불러오자.
+앞에서 다운로드받은 `gapminder` 데이터셋을 불러오자.
 
 ```{r}
 gapminder <- read.csv("data/gapminder_data.csv")
@@ -265,10 +266,10 @@ gapminder <- read.csv("data/gapminder_data.csv")
 ### 데이터셋 설명
 
 
-* 흔히 맞닥드리는 또다른 유형의 파일이 탭구분자를 갖는 파일(.tsv)이다. 탭을 구분자로 명세하는데, `"\\t"`을 사용하고, `read.delim()` 함수로 불러 읽어온다.
+* 흔히 맞닥뜨리는 또 다른 유형의 파일이 탭으로 구분된 파일(.tsv)이다. 탭을 구분자로 명세하는데, `"\\t"`을 사용하고, `read.delim()` 함수로 불러온다.
 
-* 파일을 `download.file()` 함수를 사용해서 인터넷으로부터 직접 본인 컴퓨터 폴더로 다운로드할 수 있다.
-   `read.csv()` 함수를 실행해서 다운로드 받은 파일을 읽어온다. 예를 들어,
+* `download.file()` 함수를 사용해서 파일을 인터넷으로부터 직접 본인 컴퓨터 폴더로 다운로드할 수 있다.
+   `read.csv()` 함수를 실행해서 다운로드받은 파일을 읽어온다. 예를 들어,
    
 ```{webr-r}
 #| label: dataframe-download-file-gapminder
@@ -277,7 +278,7 @@ gapminder <- read.csv("gapminder_data.csv")
 ```
 
 * 대안으로, `read.csv()` 함수 내부에 파일 경로를 웹 주소로 치환해서 인터넷에서 직접 파일을 불러올 수도 있다.
-  이런 경우 로컬 컴퓨터에 CSV 파일이 전혀 저장되지 않았다는 점을 주의한다. 예를 들어,
+  이런 경우 로컬 컴퓨터에 CSV 파일이 전혀 저장되지 않는다는 점을 주의한다. 예를 들어,
   
 ```{r eval=FALSE, echo=TRUE}
 gapminder <- read.csv("https://raw.githubusercontent.com/swcarpentry/r-novice-gapminder/main/episodes/data/gapminder_data.csv")
@@ -289,7 +290,7 @@ gapminder <- read.csv("https://raw.githubusercontent.com/swcarpentry/r-novice-ga
 :::
 
 `gapminder` 데이터셋을 좀 더 살펴보자. 
-항상 가장 먼저 해야 되는 작업은 `str` 명령어로 데이터가 어떻게 생겼는지 확인하는 것이다.
+항상 가장 먼저 해야 하는 작업은 `str` 명령어로 데이터가 어떻게 생겼는지 확인하는 것이다.
 
 ```{webr-r}
 #| label: dataframe-str-gapminder
@@ -326,7 +327,7 @@ length(gapminder)
 ```
 
 공정한 추측은 아마도 데이터프레임 길이가 행의 길이(1704)라고 보는 것이다.
-하지만, 이번에는 다르다. 데이터프레임은 **벡터와 요인으로 구성된 리스트**라는 사실을 기억하라.
+하지만, 이번에는 다르다. 데이터프레임은 **벡터와 요인으로 구성된 리스트**라는 사실을 기억하자.
 
 ```{webr-r}
 #| label: dataframe-typeof-gapminder-list
@@ -364,7 +365,7 @@ colnames(gapminder)
 현 단계에서, R이 제시하는 구조가 우리의 직관이나 예상과 부합되는지 묻어보는 것이 중요하다.
 각 칼럼에 대한 기본 자료형은 이해가 되는가?
 만약 납득이 가지 않는다면, 후속 작업에서 나쁜 놀라운 사실로 전환되기 전에 문제를 해결해야 한다.
-문제를 해결하는 데, R이 데이터를 이해하는 방법과 데이터를 기록할 때 **엄격한 일관성(strict consistency)**의 중요성에 관해 학습한 것을 동원한다.
+문제를 해결하는 데, R이 데이터를 이해하는 방법과 데이터를 기록할 때 **엄격한 일관성(strict consistency)**의 중요성에 관해 학습한 것을 활용한다.
 
 자료형과 자료구조가 타당해 보이게 되면, 데이터를 제대로 파고들 시간이 되었다.
 `gapminder` 데이터의 처음 몇 줄을 살펴보자.
@@ -386,13 +387,13 @@ head(gapminder)
 
 데이터 마지막 몇 줄, 중간 몇 줄을 점검하는 것도 좋은 습관이다. 그런데 어떻게 점검할 수 있을까?
 
-중간 몇 줄을 찾아보는 것이 너무 어렵지는 않지만, 임의로 몇 줄을 추출할 수도 있다. 어떻게 할 수 있을까?
+중간 몇 줄을 찾아보는 것은 너무 어렵지 않지만, 임의로 몇 줄을 추출할 수도 있다. 어떻게 할 수 있을까?
 
 
 ::: {.callout-caution collapse="true"}
 ### 해답
 
-마지막 몇 줄을 점검하려면, R에 내장된 함수가 있어서 상대적으로 간단하다.
+마지막 몇 줄을 점검하려면, R에 내장된 함수를 사용하면 상대적으로 간단하다.
 
 ```{webr-r}
 #| label: dataframe-tail-gapminder-answer
@@ -400,7 +401,7 @@ tail(gapminder)
 tail(gapminder, n = 15)
 ```
 
-데이터가 온전한지(혹은 관점에 따라 데이터가 온전하지 않은지)를 점검하는 데 몇 줄을 추출할 수 있을까?
+데이터가 온전한지(혹은 관점에 따라 데이터가 온전하지 않은지)를 점검하기 위해 몇 줄을 추출할 수 있을까?
 
 > 팁: 몇 가지 방법이 존재한다.
 
@@ -446,7 +447,7 @@ download.file("https://raw.githubusercontent.com/swcarpentry/r-novice-gapminder/
 gapminder <- read.csv(file = "data/gapminder_data.csv")
 ```
 
-스크립트를 실행시키면 데이터를 `gapminder` 변수에 적재시킨다.
+스크립트를 실행하면 데이터를 `gapminder` 변수에 적재한다.
 
 ```{r}
 #| eval: false
@@ -462,7 +463,7 @@ source(file = "scripts/load-gapminder.R")
 
 `str(gapminder)` 출력결과를 다시 불러오자.
 이번에는 `gapminder` 데이터에 대해 `str()` 함수가 출력하는 모든 것이 의미하는 바를 설명한다.
-지금까지 학습한 요인, 리스트와 벡터 뿐만 아니라, `colnames()`, `dim()` 같은 함수도 동원한다.
+지금까지 학습한 요인, 리스트와 벡터뿐만 아니라 `colnames()`, `dim()` 같은 함수도 동원한다.
 이해하지 못한 부분이 있다면, 주변 동료와 상의한다!
 
 ::: {.callout-caution collapse="true"}
@@ -475,4 +476,15 @@ source(file = "scripts/load-gapminder.R")
 :::
 
 :::::
+
+
+## 요약
+
+데이터 분석을 수행할 때 가장 중요한 자료 구조는 데이터프레임이다. 데이터프레임은 행과 열로 구성된 테이블 형태의 데이터를 저장하는 데 사용되며, 각 열은 벡터로 구성되고 각 행은 관측치를 나타낸다. 데이터프레임에 새로운 행이나 열을 추가할 때는 데이터의 일관성을 유지하는 것이 중요하다.
+
+데이터프레임의 열은 각각 서로 다른 자료형을 가질 수 있지만, 한 열 내에서는 모든 데이터가 동일한 자료형을 가져야 하며 필요한 경우 자료형 변환을 수행해야 한다. 특히 문자열로 구성된 열을 처리할 때는 요인형(factor)으로 변환하는 것이 효과이다.
+
+데이터프레임에서 필요 없는 행이나 열은 제거할 수 있다. 행을 제거할 때는 행 번호를 이용하거나 조건에 맞는 행을 선택하여 제거할 수 있으며, 열을 제거할 때는 열 이름이나 열 번호를 사용한다. 또한 두 개 이상의 데이터프레임을 병합하여 새로운 데이터프레임을 생성할 수도 있다.
+
+실제 데이터 분석에서는 데이터의 구조와 내용을 파악하는 것이 매우 중요하다. 왜냐하면 처음 보는 데이터로 어떻게 구성되었는지 파악하는 것이 먼저다. `str()`, `head()`, `tail()`, `summary()` 등의 함수를 활용하여 데이터의 개요를 살펴보고, 각 변수의 자료형과 값의 분포를 확인해야 한다. 또한 데이터에 결측치나 이상치가 있는지 검토하고, 상황에 맞게 적절히 처리해야 한다.
 
