--- a/intro_penguins.qmd
+++ b/intro_penguins.qmd
@@ -15,12 +15,12 @@ Matter"](https://ko.wikipedia.org/wiki/Black_Lives_Matter) 운동은
 한국에서도 소수 정당인 정의당에서 [여당 의원 176명 중 누가?...차별금지법
 발의할 '의인'을
 구합니다](http://www.hani.co.kr/arti/politics/assembly/949422.html)로
-기사로 낼 정도로 적극적으로 나서고 있다.
+기사를 내는 등 적극적으로 나서고 있다.
 
-데이터 과학에서 최근 R.A. Fisher의 과거 저술한 "The genetical theory of
-natural selection" [@fisher1930genetical] 우생학(Eugenics) 대한 관점이
+데이터 과학에서 최근 R.A. Fisher의 과거 저술 "The genetical theory of
+natural selection" [@fisher1930genetical]의 우생학(Eugenics)에 대한 관점이
 논란이 되면서 R 데이터 과학의 첫 데이터셋으로 붓꽃 `iris` 데이터를 다른
-데이터, 즉 펭귄 데이터로 대체하는 움직임이 활발히 전개되고 있다.
+데이터, 즉 펭귄 데이터로 대체하려는 움직임이 활발히 전개되고 있다.
 [`palmerpenguins`](https://github.com/allisonhorst/palmerpenguins)
 데이터셋 [@penguin2020; @AbdulMajedRaja2020; @Levy2019]이 대안으로 많은
 호응을 얻고 있다.
@@ -34,19 +34,19 @@ natural selection" [@fisher1930genetical] 우생학(Eugenics) 대한 관점이
     관광안내자료](http://www.shoestring.kr/shoecast/aaa/sp_01_peninsula/peninsula.html)
 
 -   [젠투 펭귄(Gentoo Penguin)](https://namu.wiki/w/젠투펭귄): 머리에
-    모자처럼 둘러져 있는 하얀 털 때문에 알아보기가 쉽다. 암컷이 회색이
-    뒤에, 흰색이 앞에 있다. 펭귄들 중에 가장 빠른 시속 36km의 수영
-    실력을 자랑하며, 짝짓기 할 준비가 된 펭귄은 75-90cm까지도 자란다.
+    모자처럼 둘러져 있는 하얀 털 때문에 알아보기가 쉽다. 암컷은 회색이
+    뒤에, 흰색이 앞에 있다. 펭귄 중에 가장 빠른 시속 36km의 수영
+    실력을 자랑하며, 짝짓기 준비가 된 펭귄은 75-90cm까지 자란다.
 -   [아델리 펭귄(Adelie Penguin)](https://namu.wiki/w/아델리펭귄):
-    프랑스 탐험가인 뒤몽 뒤르빌(Dumont D'Urville) 부인의 이름을 따서
+    프랑스 탐험가 뒤몽 뒤르빌(Dumont D'Urville) 부인의 이름을 따서
     '아델리'라 불리게 되었다. 각진 머리와 작은 부리 때문에 알아보기
     쉽고, 다른 펭귄들과 마찬가지로 암수가 비슷하게 생겼지만 암컷이 조금
     더 작다.
 -   [턱끈 펭귄(Chinstrap Penguin)](https://namu.wiki/w/턱끈펭귄): 언뜻
     보면 아델리 펭귄과 매우 비슷하지만, 몸집이 조금 더 작고, 목에서 머리
-    쪽으로 이어지는 검은 털이 눈에 띈다. 어린 고삐 펭귄들은 회갈색 빛을
-    띄는 털을 가지고 있으며, 목 아래 부분은 더 하얗다. 무리를 지어
-    살아가며 일부일처제를 지키기 때문에 짝짓기 이후에도 부부로써
+    쪽으로 이어지는 검은 털이 눈에 띈다. 어린 턱끈 펭귄은 회갈색 빛을
+    띠는 털을 가지고 있으며, 목 아래 부분은 더 하얗다. 무리 지어
+    살아가며 일부일처제를 지키기 때문에 짝짓기 이후에도 부부로서
     오랫동안 함께 살아간다.
 
 ![팔머 펭귄 3종 세트](images/penguin-species.png){#fig-penguin-species
@@ -62,9 +62,9 @@ fig-align="center"}
 
 ## 펭귄 서식지 {#penguin-home}
 
-`leaflet` 팩키지로 펭귄 서식지를 남극에서 특정한다. `geocoding`을 해야
+`leaflet` 패키지로 펭귄 서식지를 남극에서 특정한다. `geocoding`을 해야
 하는데 구글에서 위치 정보를 구글링하면 <https://latitude.to/>에서 직접
-위경도를 반환하여 준다. 이 정보를 근거로 하여 펭귄 서식지를 시각화한다.
+위경도를 반환해 준다. 이 정보를 근거로 하여 펭귄 서식지를 시각화한다.
 
 ::: {#palmer layout="[[1,1], [1,1,1,1]]"}
 ![파머 연구소와 펭귄 서식지](images/penguins_map.png){width="1284"}
@@ -115,7 +115,7 @@ island_df %>%
 
 ## 데이터 설치
 
-`remotes` 팩키지 `install_github()` 함수로 펭귄 데이터를 설치한다.
+`remotes` 패키지 `install_github()` 함수로 펭귄 데이터를 설치한다.
 
 ```{r}
 #| eval: false
@@ -123,7 +123,7 @@ island_df %>%
 remotes::install_github("allisonhorst/palmerpenguins")
 ```
 
-`tidyverse` 팩키지 `glimpse()` 함수로 펭귄 데이터를 일별한다.
+`tidyverse` 패키지 `glimpse()` 함수로 펭귄 데이터를 일별한다.
 
 ```{r glimpse-dataset}
 library(tidyverse)
@@ -134,8 +134,8 @@ glimpse(penguins)
 
 ## 자료구조 일별 {#penguin-EDA-skimr}
 
-`skimr` 팩키지를 사용해서 `penguins` 데이터프레임 자료구조를 일별한다.
-이를 통해서 344개 펭귄 관측값이 있으며, 7개 칼럼으로 구성된 것을 확인할
+`skimr` 패키지를 사용해서 `penguins` 데이터프레임 자료구조를 일별한다.
+이를 통해 344개 펭귄 관측값이 있으며, 7개 칼럼으로 구성된 것을 확인할
 수 있다. 또한, 범주형 변수가 3개, 숫자형 변수가 4개로 구성되어 있다.
 그외 더 자세한 사항은 범주형, 숫자형 변수에 대한 요약 통계량을 참조한다.
 
@@ -248,7 +248,7 @@ penguins |>
 
 ### `.xlsx` 엑셀 파일
 
-`readxl` 패키지는 엑셀 파일을 불러오는데 적합하지만 엑셀파일로 저장하는 기능은 없다.
+`readxl` 패키지는 엑셀 파일을 불러오는 데 적합하지만 엑셀파일로 저장하는 기능은 없다.
 `writexl` 패키지 `write_xlsx()` 함수를 사용하여 데이터를 `data/penguins.xlsx` 파일로 저장한다. 
 
 ```{r}
@@ -283,10 +283,10 @@ dbDisconnect(con)
 
 ### `pins`
 
-`pins` 패키지는 R 사용자들이 데이터, 모델, 기타 R 객체를 쉽게 공유하고 관리할 수 있다.
+`pins` 패키지는 R 사용자들이 데이터, 모델, 기타 R 객체를 쉽게 공유하고 관리할 수 있게 해준다.
 먼저 `board_folder()` 함수를 사용하여 로컬 폴더에 보드를 생성한다. 사용자명을 달리하여 각자 환경에 맞춰 `"C:/Users/<사용자명>/OneDrive/pins"`와 같이 보드 폴더로 설정한다.
 
-`metadata` 리스트를 생성하여 데이터에 대한 추가 정보를 제공하여 공유데이터를 전달받는 사용자 입장에서 데이터를 즉각적으로 파악할 수 있도록 한다.
+`metadata` 리스트를 생성하여 데이터에 대한 추가 정보를 제공하여 공유 데이터를 전달받는 사용자 입장에서 데이터를 즉각적으로 파악할 수 있도록 한다.
 `pin_write()` 함수를 사용하여 펭귄 데이터를 보드에 핀(pin)으로 저장하면서 `name`, `title`, `description` 등의 인자를 통해 핀에 대한 정보를 제공하고, `metadata` 인자를 사용하여 앞서 생성한 메타데이터를 핀에 첨부한다.
 
 ```{r}
@@ -310,8 +310,8 @@ board  |> pin_write(penguins |> drop_na(),
 
 구글시트는 구글에서 제공하는 엑셀과 동일한 온라인 스프레드시트 서비스로, 실시간 협업, 버전 관리, 클라우드 저장 등의 기능을 제공한다.
 
-R에서 구글시트와 구글 드라이브를 사용하기 위한 인터페이스를 제공되는 `googlesheets4`와 `googledrive` 패키지를 로드한다.
-`googledrive::drive_auth()` 함수를 호출하여 구글 드라이브 인증 과정을 거친다. 함수를 실행시키면 웹 브라우저가 열리고, 구글 계정으로 로그인하여 인증을 완료해야만 R에서 구글 드라이브와 구글시트에 접근할 수 있다.
+R에서 구글시트와 구글 드라이브를 사용하기 위한 인터페이스를 제공하는 `googlesheets4`와 `googledrive` 패키지를 로드한다.
+`googledrive::drive_auth()` 함수를 호출하여 구글 드라이브 인증 과정을 거친다. 함수를 실행하면 웹 브라우저가 열리고, 구글 계정으로 로그인하여 인증을 완료해야만 R에서 구글 드라이브와 구글시트에 접근할 수 있다.
 
 인증이 완료되면 `gs4_create()` 함수를 사용하여 새로운 구글시트를 생성한다. `name` 인자로 시트의 이름을 지정하고, `sheets` 인자로 시트에 포함될 데이터를 리스트 형태로 제공한다. `penguins`라는 이름의 시트를 생성하고, 그 안에 펭귄 데이터를 저장한다.
 
@@ -346,7 +346,7 @@ gs4_create(
 
 
 
-### 그외 형식
+### 그 외 형식
 
 앞서 살펴본 데이터 형식은 데이터 과학을 처음 접하는 사용자들이 많이 사용하는 형식이다. 하지만 데이터 과학자로 성장해 나가면서 그 외에도 다양한 형식의 데이터를 마주하게 된다. 펭귄 데이터셋을 비롯한 여러 데이터를 다양한 파일 형식으로 저장할 수 있는데, 각 파일 형식마다 장단점이 있으므로 상황에 맞게 적절한 파일 형식을 선택하여 사용하는 것이 좋다.
 
@@ -388,4 +388,13 @@ write_feather(penguins |> drop_na(), "data/penguins.feather")
 write_parquet(penguins |> drop_na(), "data/penguins.parquet")
 ```
 
+## 요약
+
+펭귄 데이터셋은 데이터 과학 분야에서 새롭게 주목받고 있는 데이터셋으로 피셔의 우생학 관점이 담긴 붓꽃 데이터셋을 대체하려는 움직임 속에서 대안으로 떠오르고 있다. 이 데이터셋은 남극의 파머 연구소에서 수집된 세 종류의 펭귄(젠투, 아델리, 턱끈 펭귄)의 형태학적 특징을 담고 있다. 
+
+펭귄 데이터는 `palmerpenguins` 패키지를 통해 쉽게 설치하고 사용할 수 있으며, 데이터 탐색 과정에서 `skimr`와 `dplyr` 패키지의 함수들을 활용하여 데이터의 구조와 특징을 파악할 수 있다. 또한 `ggplot2` 패키지를 사용하여 펭귄 종별 물갈퀴 길이와 체질량 간의 관계를 시각화할 수 있다.
+
+펭귄 데이터 자체보다는 데이터를 다양한 형식으로 저장하고 공유하는 것은 데이터 과학에서 중요한 부분이다. R 사용자들은 `.rds`, `.rda`, `.feather`, `.parquet` 등의 파일 형식을 선호하지만, 협업을 위해서는 `.csv`, `.xlsx`, SQLite 데이터베이스 등 다른 도구에서도 쉽게 사용할 수 있는 형식으로 저장하는 것이 좋다. 또한 `pins` 패키지나 구글 스프레드시트를 활용하면 클라우드 기반에서 데이터를 공유하고 협업할 수 있다.
+
+펭귄 데이터셋은 데이터 과학 교육 및 연구에 널리 사용될 수 있는 유용한 자료로, 데이터 탐색, 시각화, 전처리, 모형 등 다양한 단계에서 저작권 걱정없이 누구나 활용할 수 있다.
 
