--- a/data_dplyr.qmd
+++ b/data_dplyr.qmd
@@ -1,9 +1,9 @@
-# `dplyr` 패키지
+# `dplyr` 패키지 {#sec-dplyr}
 
-데이터프레임을 솜씨있게 조작하는 것은 많은 과학연구원에게 큰 의미를 지닌다.
+데이터프레임을 솜씨 있게 조작하는 것은 많은 과학연구원에게 큰 의미를 지닌다.
 특정 관측점(행) 혹은 변수(열)을 선택하거나,
 특정 변수(들)로 데이터를 집단으로 그룹 짓거나, 요약 통계량을 계산하기도 한다.
-이런 연산작업에 기본 베이스(Base) R 연산을 사용한다:  
+이런 연산 작업에 기본 베이스(Base) R 연산을 사용한다.
 
 
 ```{webr-r}
@@ -20,18 +20,18 @@ mean(gapminder[gapminder$continent == "Asia", "gdpPercap"])
 #> [1] 7902.15
 ```
 
-하지만, 그다지 *멋있지는* 않은데, 이유는 상당한 반복이 상존하기 때문이다.
-여러분이 직접 반복하게 되면, 지금 뿐만 아니라 나중에도 소중한 시간을 허비하게 되고,
+하지만, 그다지 *멋있지는* 않은데, 이유는 상당한 반복이 존재하기 때문이다.
+여러분이 직접 반복하게 되면, 지금뿐만 아니라 나중에도 소중한 시간을 허비하게 되고,
 더 나아가 잠재적으로 버그가 스며들 여지를 남기게 된다.
 
 
 ## `dplyr` 팩키지
 
-운 좋게도, [`dplyr`](https://cran.r-project.org/web/packages/dplyr/dplyr.pdf) 팩키지가 
-데이터프레임을 솜씨 있게 조작하는 데 있어 유용한 함수를 많이 제공한다. 
-이를 통해서, 위에서 언급된 반복을 줄이고, 실수를 범할 확률도 줄이고,
+운 좋게도, [`dplyr`](https://cran.r-project.org/web/packages/dplyr/dplyr.pdf) 패키지가 
+데이터프레임을 솜씨 있게 조작하는 데 유용한 함수를 많이 제공한다. 
+이를 통해서, 위에서 언급된 반복을 줄이고, 실수를 범할 확률도 줄이며,
 심지어 타이핑 수고도 줄일 수 있다. 
-보너스로, `dplyr` 문법은 훨씬 더 가독성도 높다.
+보너스로, `dplyr` 문법은 훨씬 더 가독성이 높다.
 
 가장 흔히 사용되는 6가지 함수뿐만 아니라, 
 이런 함수를 조합하는 데 사용되는 파이프 (`%>%`) 연산자 사용법도 다룬다.
@@ -42,8 +42,8 @@ mean(gapminder[gapminder$continent == "Asia", "gdpPercap"])
 4. `summarize()`
 5. `mutate()`
 
-이전 수업에서 팩키지를 설치하지 않았다면, 설치해서 직접 실습해 보기 바란다.
-이제 팩키지를 불러와서 적재한다.
+이전 장에서 패키지를 설치하지 않았다면, 설치해서 직접 실습해 보기 바란다.
+이제 패키지를 불러와서 적재한다.
 
 ```{r}
 #| eval: false
@@ -66,11 +66,11 @@ year_country_gdp <- select(gapminder,year,country,gdpPercap)
 ![`select`함수 데이터프레임 적용 도식화](images/gapminder/13-dplyr-fig1.png){#fig-dplyr-select}
 
 `year_country_gdp` 데이터프레임을 열어보면, 
-`year`, `country`, `gdpPercap` 변수만 담겨있는 것을 볼 수 있다.
+`year`, `country`, `gdpPercap` 변수만 담겨 있는 것을 볼 수 있다.
 위에서는 `정규` 문법이 사용되었지만, 
-`dplyr` 팩키지의 장점은 파이프를 사용해서 함수 다수를 조합하는 데 있다.
-파이프 문법은 이전에 R에서 살펴봤던 것과는 사뭇 다르다.
-위에서 파이프를 사용했던 것을 다시 작성해본다.
+`dplyr` 패키지의 장점은 파이프를 사용해서 함수 다수를 조합하는 데 있다.
+파이프 문법은 이전에 R에서 살펴본 것과는 사뭇 다르다.
+위에서 파이프를 사용한 것을 다시 작성해본다.
 
 
 ```{webr-r}
@@ -80,10 +80,10 @@ year_country_gdp <- gapminder %>% select(year,country,gdpPercap)
 
 파이프를 사용해서 작성한 이유에 대한 이해를 돕기 위해서, 단계별로 살펴보자.
 먼저 `gapminder` 데이터프레임을 불러오고 나서, 
-`%>%` 파이프 기호를 사용해서 다음 작업단계(`select()` 함수)로 전달했다. 
-이번 경우에는 `select()` 함수에 데이터 객체를 명세하지 않았는데,
+`%>%` 파이프 기호를 사용해서 다음 작업 단계(`select()` 함수)로 전달했다. 
+이번 경우에는 `select()` 함수에 데이터 객체를 명시하지 않았는데,
 이는 이전 파이프로부터 데이터를 전달받았기 때문이다. 
-**재미난 사실:** 유닉스 셸 강의에서 이미 파이프를 접해봤을 것이다. 
+**재미있는 사실:** 챗GPT 유닉스 쉘 책[@ChatGPT2023]에서 이미 파이프를 접해봤을 것이다. 
 R에서 파이프 기호가 `%>%`인 반면, 셸에서는 `|`을 사용한다. 
 하지만 개념은 동일하다!
 
@@ -91,7 +91,7 @@ R에서 파이프 기호가 `%>%`인 반면, 셸에서는 `|`을 사용한다.
 ## `filter()` 동사
 
 이제 앞선 작업을 바탕으로 작업을 진척시켜 보자.
-유럽대륙만 갖고 작업하고자 한다면 `select`와 `filter`를 조합하면 된다.
+유럽 대륙만 갖고 작업하고자 한다면 `select`와 `filter`를 조합하면 된다.
 
 
 ```{webr-r}
@@ -124,14 +124,14 @@ year_country_lifeExp_Africa <- gapminder %>%
 
 지난번과 마찬가지로, `gapminder` 데이터프레임을 `filter()` 함수에 전달하고 나서, 
 필터링된 `gapminder` 데이터프레임 버전을 `select()` 함수에 전달한다.
-**주의:** 연산순서가 이번 경우에 무척 중요하다.
+**주의:** 연산 순서가 이번 경우에 무척 중요하다.
 `select()` 함수를 먼저 실행하면, `filter()` 함수는 대륙 변수를 찾을 수 없는데, 
 이는 이전 단계에서 제거했기 때문이다.
 
 
 ## `group_by()` + `summarize()` 조합
 
-이제, 기본 베이스(base) R로 작업함으로써 실수를 범하기 쉬운 반복작업을 줄일 것으로 생각했지만,
+이제, 기본 베이스(base) R로 작업함으로써 실수를 범하기 쉬운 반복 작업을 줄일 것으로 생각했지만,
 현재까지는 목표를 달성하지 못했다. 왜냐하면, 각 대륙마다 상기 작업을 반복해야 되기 때문이다.
 `filter()` 대신에, `group_by()`를 사용한다.
 `filter()`는 특정 기준을 만족하는 관측점만 넘겨준다(이번 경우: `continent=="Europe"`).
@@ -229,7 +229,7 @@ lifeExp_bycountry %>%
 
 문제를 푸는 또 다른 방식은 `dplyr` 패키지의 `arrange()` 함수를 사용하는 것이다.
 `arrange()` 함수는 변수에 따라 데이터프레임을 행으로 정렬하는 기능을 갖고 있으며,
-`dplyr` 팩키지의 다른 함수처럼 유사한 구문을 갖추고 있다.
+`dplyr` 패키지의 다른 함수와 유사한 구문을 갖추고 있다.
 `arrange()` 함수 내부에 `desc()` 함수를 사용해서 내림차순으로 정렬할 수 있다.
 
 ```{webr-r}
@@ -248,7 +248,7 @@ lifeExp_bycountry %>%
 :::::
 
 `group_by()` 함수에 변수 다수를 사용해서 집단으로 그룹을 만들 수도 있다.
-`year` 와 `continent` 변수로 그룹을 만들어 보자.
+`year`와 `continent` 변수로 그룹을 만들어 보자.
 
 
 ```{webr-r}
@@ -295,7 +295,7 @@ gapminder %>%
 #> 5   Oceania  2
 ```
 
-계산과정에서 관측점 개수를 파악할 필요가 있는 경우, `n()` 함수가 유용하다.
+계산 과정에서 관측점 개수를 파악할 필요가 있는 경우, `n()` 함수가 유용하다.
 예를 들어, 각 대륙별 기대수명 표준오차를 다음과 같이 구할 수도 있다:
 
 ```{webr-r}
@@ -391,8 +391,8 @@ library("ggplot2")
 ```
 
 
-`ggplot2`을 사용해서 패싯(facet) 패널 계층을 추가해서 작은 창에 그래프를 담아내는 방식을 
-앞선 시각화 수업에서 확인했다. 다음에 앞서 사용한 코드가 나와 있다.
+`ggplot2`를 사용해서 패싯(facet) 패널 계층을 추가해서 작은 창에 그래프를 담아내는 방식을 
+앞선 시각화 수업에서 확인했다. 다음은 앞서 사용한 코드이다.
 
 ```{webr-r}
 #| label: ggplot2-facet_wrap
@@ -408,13 +408,13 @@ ggplot(data = az.countries, aes(x = year, y = lifeExp, color = continent)) +
 ```
 
 상기 코드는 원하는 그래프를 만들어 주지만,
-다른 용도로는 뚜렷이 사용되지 않는 변수(`starts.with`, `az.countries`)도 생성시키게 된다.
-`%>%` 연산자를 사용해서 `dplyr` 함수를 엮어 데이터를 파이프에 흘러 보냈듯이,
-`ggplot()` 함수에 데이터를 흘러 보낼 수 있다.
+다른 용도로는 뚜렷이 사용되지 않는 변수(`starts.with`, `az.countries`)도 생성하게 된다.
+`%>%` 연산자를 사용해서 `dplyr` 함수를 엮어 데이터를 파이프에 흘러보냈듯이,
+`ggplot()` 함수에 데이터를 흘러보낼 수 있다.
 `%>%` 파이프 연산자가 함수의 첫 번째 인자를 대체하기 때문에,  
-`ggplot()` 함수에 `data =` 인자를 명세할 필요는 없다.
+`ggplot()` 함수에 `data =` 인자를 명시할 필요는 없다.
 `dplyr`, `ggplot2` 함수를 조합하게 되면, 동일한 그래프를 생성하는 데 있어
-변수를 새로 생성시키거나 데이터를 변경할 필요가 없어진다.
+변수를 새로 생성하거나 데이터를 변경할 필요가 없어진다.
 
 ```{webr-r}
 #| label: ggplot2-facet_wrap-dplyr
@@ -468,5 +468,7 @@ lifeExp_2countries_bycontinents <- gapminder %>%
 :::
 
 :::::
+
+## 요약
 
 
