--- a/intro_whole_game.qmd
+++ b/intro_whole_game.qmd
@@ -1,9 +1,8 @@
 
 # 데이터 과학 큰 그림
 
-데이터 과학을 각 부분별로 나눠서 상세히 살펴보는 대신 데이터 과학을 구성하는 데이터 가져오기(Import), 깔끔화(Tidy), 변환(Transform) 및 시각화(visualize)에 대해 전체적인 작업흐름을 신속히 일별하고 시작하는 것이
-최근의 추세다. 다양한 데이터에 대한 이해와 분석 경험이 쌓이면서 `tidyverse` 가 새롭게 출현했고,
-관련하여 데이터 문법(grammar of data), 그래프 문법(grammar of graphics), 표문법(grammar of table)이 `tidyverse`의 중추를 이루는데 각각을 자세히 살펴보기에 앞서 데이터 과학 맛보기를 통해 전반적인 흐름을 살펴보자.
+데이터 과학을 각 부분별로 나눠서 상세히 살펴보는 대신 데이터 과학을 구성하는 데이터 가져오기(Import), 깔끔화(Tidy), 변환(Transform), 시각화(visualize)에 대해 전체적인 작업흐름을 신속히 일별하고 시작하는 것이 최근의 추세다. 
+다양한 데이터에 대한 이해와 분석 경험이 쌓이면서 `tidyverse`가 새롭게 출현했고, 관련하여 데이터 문법(grammar of data), 그래프 문법(grammar of graphics), 표 문법(grammar of table)이 `tidyverse`의 중추를 이룬다. 각각을 자세히 살펴보기에 앞서 데이터 과학 맛보기를 통해 전반적인 흐름을 살펴보자.
 
 ```{mermaid}
 %%| fig-align: center
@@ -34,7 +33,8 @@ graph TB
     class 이해하기 subgraphStyle
 ```
 
-백의 천사로도 잘 알려진 플로렌스 나이팅게일 사례는 데이터 과학의 전체 과정(whole game)을 잘 보여주는 대표적인 사례다. 나이팅게일은 단순히 데이터를 수집하고 분석하는 것에 그치지 않고, 데이터에서 얻은 통찰을 실제 세계에 적용하여 변화를 이끌어냈기 때문이다.
+백의 천사로도 잘 알려진 플로렌스 나이팅게일 사례는 데이터 과학의 전체 과정(whole game)을 잘 보여주는 대표적인 사례다. 
+나이팅게일은 단순히 데이터를 수집하고 분석하는 것에 그치지 않고, 데이터에서 얻은 통찰을 실제 세계에 적용하여 변화를 이끌어냈기 때문이다.
 
 나이팅게일은 크림 전쟁 당시 병원에서 데이터를 수집하고 분석하여 사망 원인의 대부분이 열악한 위생 환경에서 비롯된 감염성 질병이라는 사실을 발견했다. 하지만 발견한 것에서 만족하지 않고 열악한 병원 환경 개선을 위한 캠페인을 펼쳤다.
 
@@ -67,7 +67,7 @@ graph TB
 
 ### 원본 데이터
 
-크림 전쟁 중 튀르키예의 스쿠타리 병원에서 몇 년간에 걸쳐 수작업으로 종이에 분석 가능한 형태의 자료를 만들어내는 것은 결코 쉬운 작업이 아니다.
+크림 전쟁 중 튀르키예의 스쿠타리 병원에서 몇 년간에 걸쳐 수작업으로 종이에 분석 가능한 형태의 자료를 만들어내는 것은 결코 쉬운 작업이 아니었다.
 
 ![원본 데이터](images/nightingale_raw_data.jpg){#fig-nightingale-raw-data fig-align="center" width="299"}
 
@@ -113,7 +113,7 @@ graph TB
 
 나이팅게일 캠페인이 민간 공중보건에 미친 가장 큰 영향은 실현되기까지 오랜 기간에 걸쳐 다각도로 검토되었고, 마침내 1875년 영국 공중보건법(British Public Health Act)에 법제화되었다.
 이 법에는 잘 정비된 하수도, 깨끗한 수돗물, 건축법 규제 등의 요건이 담겨있다.
-질병에 대한 면역력을 강화하는 백신과 농작물 수확량을 획기적으로 늘리는 인공비료 개발과 함께 이 제도적인 노력으로 평균 수명을 두 배로 늘리는 원동력이 되었다.
+질병에 대한 면역력을 강화하는 백신과 농작물 수확량을 획기적으로 늘리는 인공비료 개발과 함께이 제도적인 노력으로 평균 수명을 두 배로 늘리는 원동력이 되었다.
 
 ## 작업과정
 
@@ -176,7 +176,7 @@ death_viz
 \index{시각화} \index{ggplot2}
 
 'ggplot2' 패키지를 이용하여 크림전쟁 나이팅게일 활약상을 담은 데이터를 시각화한다.
-나이팅게일 활약 전과 후로 데이터(`death_viz`)를 나눠 "크림전쟁 병사 사망원인"에 대한 극좌표계 시각화를 통해 이해하기쉬운 설득력 있는 시각화 결과물을 제시하고 있다.
+나이팅게일 활약 전과 후로 데이터(`death_viz`)를 나눠 "크림전쟁 병사 사망원인"에 대한 극좌표계 시각화를 통해 이해하기 쉬운 설득력 있는 시각화 결과물을 제시하고 있다.
 추가적으로, 'showtext' 패키지로 구글 "Noto Serif KR" 글꼴을 선택 적용하고, 'hrbrthemes' 라이브러리를 이용하여 뒷배경 검정색을 사용하여 붉은색 질병으로 인한 사망자 수의 확연한 감소를 시각적으로 강조한다.
 
 ```{r}
@@ -227,7 +227,8 @@ dev.off()
 
 \index{선그래프} \index{콕스콤} \index{장미 다이어그램}
 
-나이팅게일은 간호 분야의 선구자로 잘 알려져 있지만, 통계학자로서 "콕스콤(CoxComb)" 또는 "장미 다이어그램"(Rose Diagram)으로 알려진 원그래프를 제시하였지만 현재는 시간의 흐름에 따라 병사 사망자 수 변화를 조치 전후로 명확히 하는 방법으로 선그래프가 기본 기법으로 자리 잡고 있다.
+나이팅게일은 간호 분야의 선구자로 잘 알려져 있지만, 통계학자로서 "콕스콤(CoxComb)" 또는 "장미 다이어그램"(Rose Diagram)으로 알려진 원그래프를 제시하였다. 
+그러나 현재는 시간의 흐름에 따라 병사 사망자 수 변화를 조치 전후로 명확히 하는 방법으로 선그래프가 기본 기법으로 자리 잡고 있다.
 
 ```{r}
 #| eval: false
@@ -278,7 +279,7 @@ dev.off()
 
 ### 막대그래프
 
-동일한 정보를 막대그래프를 통해 시각화를 할 수도 있다.
+동일한 정보를 막대그래프를 통해 시각화할 수도 있다.
 원그래프와 비교하여 보면 명확하게 사망자 수를 직관적으로 비교할 수 있다는 점에서 큰 장점이 있다.
 
 ```{r}
@@ -398,4 +399,14 @@ plot_grid(p111, p112)
 ```
 
 ![조치 전후 변화를 표 시각화](images/death_two_tables.png){#fig-death-viz-table fig-align="center" width="450"}
+
+## 요약
+
+플로렌스 나이팅게일은 크림 전쟁 중 병원에서의 열악한 위생 상태와 감염성 질병으로 인한 높은 사망률을 데이터 수집과 분석을 통해 발견했다. 데이터를 통해 발견한 사실을 시각화하여 정부와 대중에게 효과적으로 전달함으로써 군 병원 위생 개선을 이끌어냈고, 사망률을 크게 낮춰 수많은 소중한 생명을 구하는 성과로 이어졌다.
+
+나이팅게일은 수집한 데이터를 분석하고 시각화하는 과정에서 로즈 다이어그램이라는 새로운 형태의 그래프를 고안하였다. 당시로서는 혁신적인 데이터 시각화 방식이었으며, 데이터의 의미를 명확하게 전달하는 데 큰 역할을 했다. 더 나아가 데이터 스토리텔링 기법을 활용하여 군대 사망률과 민간인 사망률을 비교하는 등 설득력 있는 주장을 펼쳤다.
+
+나이팅게일의 활동은 단순히 군 병원의 개선에 그치지 않고, 이후 영국 공중보건 정책에도 큰 영향을 미쳤다. 이러한 노력은 1875년 공중보건법 제정으로 이어졌으며, 하수도 정비, 수질 관리, 건축법 규제 등 공중보건 인프라 개선의 기반이 되었다.
+
+나이팅게일의 사례는 데이터 수집, 분석, 시각화를 통해 실제 변화를 이끌어낸 데이터 과학의 전형적인 예시라고 할 수 있다. 데이터에 기반한 통찰력으로 사회 문제를 파악하고, 이를 효과적으로 전달하여 정책 변화와 개선을 이끌어냈다는 점에서 데이터 과학이 단순히 기술적인 분석에 그치는 것이 아니라, 실제 세상에 긍정적인 영향을 미칠 수 있음을 보여주는 대표적인 사례로 알려져 있다.
 
