--- a/data_dplyr.qmd
+++ b/data_dplyr.qmd
@@ -25,8 +25,6 @@ mean(gapminder[gapminder$continent == "Asia", "gdpPercap"])
 더 나아가 잠재적으로 버그가 스며들 여지를 남기게 된다.
 
 
-## `dplyr` 팩키지
-
 운 좋게도, [`dplyr`](https://cran.r-project.org/web/packages/dplyr/dplyr.pdf) 패키지가 
 데이터프레임을 솜씨 있게 조작하는 데 유용한 함수를 많이 제공한다. 
 이를 통해서, 위에서 언급된 반복을 줄이고, 실수를 범할 확률도 줄이며,
@@ -354,7 +352,7 @@ gdp_pop_bycontinents_byyear <- gapminder %>%
               sd_gdp_billion=sd(gdp_billion))
 ```
 
-## `mutate()` 논리 필터와 연결: `ifelse` 
+## `mutate()` 논리 필터 연결
 
 변수를 새로 만들 때, `mutate()` 함수를 논리 조건문과 엮을 수 있다.
 `mutate()`와 `ifelse()`의 단순 조합을 통해서 필요한 것만 적절히 필터링할 수 있다. 즉, 새로운 무언가를 생성하는 순간에 말이다.
@@ -471,4 +469,7 @@ lifeExp_2countries_bycontinents <- gapminder %>%
 
 ## 요약
 
+데이터프레임 조작에 유용한 `dplyr` 패키지는 
+data 와 pliers(집게)의 합성어로, 데이터프레임을 다양한 집게로 잡아 조작한다는 의미이다. `select()`는 원하는 변수만 선택하고, `filter()`는 조건에 맞는 관측점만 남긴다. `group_by()`와 `summarize()` 함수를 조합하면 그룹별로 요약 통계량을 계산할 수 있다. 새 변수 생성에는 `mutate()`를 사용하고, 빈도수 수 계산에는 `count()`와 `n()` 함수가 유용하다.
 
+`dplyr`의 강력함은 `%>%`, `|>` 파이프 연산자로 함수를 연결해 복잡한 조작을 간결하게 표현하는 데 있다. `ggplot2` 패키지와 결합해 그래프 생성 코드를 깔끔하게 만드는 데에도 활용된다. `dplyr`로 데이터 전처리를 마친 뒤 `%>%`를 통해 `ggplot()` 함수로 바로 연결하면 임시변수 생성 없이 그래프를 제작할 수 있다.
