added visualization part

--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,10 @@
+@book{munzner2014visualization,
+  title={Visualization analysis and design},
+  author={Munzner, Tamara},
+  year={2014},
+  publisher={CRC press}
+}
+
 @article{AbdulMajedRaja2020,
   title={Penguins Dataset Overview - iris alternative in R
 using {palmerpenguins}},
