--- a/data_tidyr.qmd
+++ b/data_tidyr.qmd
@@ -33,7 +33,7 @@ gap_wide <- read.csv("data/gapminder_wide.csv", header=TRUE, stringsAsFactors = 
 순수한 'long'(또는 '가장 긴') 형식에서는 일반적으로 관측 변수에 대해 1개의 열과 ID 변수에 대해 다른 열들을 가진다. 
 
 'wide' 형식에서 각 행은 흔히 관측점(site/subject/patient)이며, 
-동일한 자료형을 담고 있는 다수 관측변수를 갖게 된다. 
+동일한 자료형을 담고 있는 다수 관측변수를 갖는다. 
 시간이 경과함에 따라 반복되는 관측점이거나, 다수 변수의 관측점(혹은 둘이 혼합된 사례)일 수 있다. 
 데이터 입력이 더 단순하거나 일부 다른 응용 사례에서 'wide' 형식을 선호할 수 있다. 
 하지만, `R` 함수 다수는 'long'형식을 가정하고 설계되었다. 
@@ -64,7 +64,7 @@ library("tidyr")
 library("dplyr")
 ```
 
-먼저 원래 gapminder 데이터프레임의 구조를 살펴보자:
+먼저 원래 gapminder 데이터프레임의 구조를 살펴보자.
 
 ```{r}
 str(gapminder)
@@ -110,7 +110,7 @@ str(gapminder)
 `gapminder` 데이터셋에 대한 `wide` 형식 버전을 가지고 시작해보자.
 
 > [이곳에서](https://raw.githubusercontent.com/bit2r/gpt-ds/main/data/gapminder_wide.csv) 'wide' 형태를 갖는
-> `gapminder` 데이터를 다운로드 받아서, 로컬 `data` 폴더에 저장시킨다.
+> `gapminder` 데이터를 다운로드 받아서, 로컬 `data` 폴더에 저장한다.
 
 데이터 파일을 불러와서 살펴보자.
 주의: `continent`, `country` 칼럼이 요인형 자료형이 될 필요가 없으므로
@@ -198,9 +198,7 @@ str(gap_long)
 먼저 `pivot_longer()`에 longer 형식으로 피벗될 열 이름 벡터를 제공한다. 
 모든 관측 변수를 입력할 수도 있지만 `dplyr` 레슨의 `select()` 함수처럼 `starts_with()` 인수를 사용하여 원하는 문자열로 시작하는 모든 변수를 선택할 수 있다. 
 `pivot_longer()`는 피벗하지 않을 변수(즉, ID 변수)를 식별하기 위해 `-` 기호를 사용하는 대체 구문도 허용한다.
-`pivot_longer()`에 대한 다음 인수는 새 ID 변수(`obstype_year`)를 포함할 열의 이름을 지정하는 `names_to`와 새로 합쳐진 관측 변수(`obs_value`)의 이름을 지정하는 
-`values_to`이다. 새 열 이름을 문자열로 제공하여 후속 작업 가독성을 높인다.
-
+`pivot_longer()`에 대한 다음 인수는 새 ID 변수(`obstype_year`)를 포함할 열의 이름을 지정하는 `names_to`와 새로 합쳐진 관측 변수(`obs_value`)의 이름을 지정하는 `values_to`이다. 새 열 이름을 문자열로 제공하여 후속 작업 가독성을 높인다.
 
 ```{webr-r}
 #| label: tidyr-gapminder-pivot-longer2
@@ -480,4 +478,12 @@ all.equal(gap_wide, gap_wide_betterID)
 
 다시 되돌아왔다!
 
+## 요약
 
+`tidyr` 패키지는 데이터를 'wide' 형식에서 'long' 형식으로, 또는 그 반대로 변환하는 데 사용된다. 'long' 형식은 각 열이 변수이고 각 행이 관측치인 형식이며, 'wide' 형식은 각 행이 관측치이고 여러 관측 변수를 포함하는 형식이다. 대부분의 데이터셋은 이 두 극단 사이의 중간 형식으로 존재한다.
+
+`pivot_longer()` 함수는 'wide' 형식에서 'long' 형식으로 데이터를 변환하는 데 사용되며, 열의 수를 줄이고 행의 수를 늘린다. 이 함수는 pivot할 열을 선택하고, 새로운 변수 이름을 지정할 수 있는 유연성을 제공한다. `separate()` 함수를 사용하면 하나의 변수를 여러 변수로 분할할 수 있다.
+
+반대로 `pivot_wider()` 함수는 'long' 형식에서 'wide' 형식으로 데이터를 변환하는 데 사용되며, 열의 수를 늘리고 행의 수를 줄인다. `unite()` 함수를 사용하면 여러 변수를 하나의 변수로 결합할 수 있다.
+
+`tidyr` 패키지의 함수들을 사용하면 데이터 형식을 유연하게 변환할 수 있으며, `dplyr` 패키지와 함께 사용하면 데이터 조작 및 분석을 효율적으로 수행할 수 있다.
