--- a/ggplot2_concept.qmd
+++ b/ggplot2_concept.qmd
@@ -6,23 +6,21 @@ editor:
 
 # 그래프 문법 {#ggplot}
 
-기존 베이스 R 그래픽(Base R Graphics)은 R 프로그래밍 언어에 기본 내장된 저수준 그래픽 함수들을 총칭한다. 화가가 캔버스에 그림을 그려나가는 과정과 비슷하게 사용자는 저수준 그랙픽 함수를 사용해서 데이터 시각화 그래픽을 제작해 나간다.
-
+기존 베이스 R 그래픽(Base R Graphics)은 R 프로그래밍 언어에 기본 내장된 저수준 그래픽 함수들을 총칭한다. 화가가 캔버스에 그림을 그려나가는 과정과 비슷하게 사용자는 저수준 그래픽 함수를 사용해서 데이터 시각화 그래픽을 제작해 나간다.
 베이스 R 그래픽에서 사용자가 직접 모든 그래프 각 요소를 개별적으로 지정하고 조정해야 한다. 예를 들어, 축, 레이블, 색상, 점의 크기 등을 모두 사용자가 직접 설정해야 하는데, 마치 화가가 캔버스에 선을 그리고, 색을 칠하고, 세부사항을 추가하는 것과 매우 유사하다.
 
-베이스 R 그래픽은 매우 유연하여 그래프의 모든 측면을 통제할 수 있다는 장점이 있지만, 이러한 유연성은 동시에 단점으로 작용한다. 그래프를 생성하는 과정이 복잡하고 시간이 많이 걸리고, 코드 가독성이 떨어질 뿐만 아니라, 그래프 스타일 일관성 유지에도 어려움이 따른다.
-
-베이스 R 그래픽 한계를 극복하기 위해 그래프 문법(Grammar of Graphics)에 기반한 `ggplot2`와 같은 고수준 패키지가 개발되었다. 그래프 문법을 따르는 `ggplot2` 그래픽 시스템을 사용하면 그래픽 요소들을 추상화하고 체계화하여 더 간단하고 직관적인 방식으로 그래프를 생성할 수 있다.
+베이스 R 그래픽은 매우 유연하여 그래프의 모든 측면을 통제할 수 있다는 장점이 있지만, 이러한 유연성은 동시에 단점으로 작용한다. 그래프를 생성하는 과정이 복잡하고 시간이 많이 걸리며, 코드 가독성이 떨어질 뿐만 아니라, 그래프 스타일의 일관성을 유지하기도 어렵다.
+베이스 R 그래픽의 한계를 극복하기 위해 그래프 문법(Grammar of Graphics)에 기반한 `ggplot2`와 같은 고수준 패키지가 개발되었다. 그래프 문법을 따르는 `ggplot2` 그래픽 시스템을 사용하면 그래픽 요소들을 추상화하고 체계화하여 더 간단하고 직관적인 방식으로 그래프를 생성할 수 있다.
 
 
 ## 그래프 문법 역사 {#why-ggplot2}
 
-릴랜드 윌킨스(Leland Wilkinson)의 "The Grammar of Graphics"는 1999년 첫 출간된 이후 **데이터 그래픽(data graphics)**에 많은 영향을 주어 `ggplot2`, Polaris → Tableau, Vega-Lite 등의 형태로 우리곁에 다가섰다.
+릴랜드 윌킨슨(Leland Wilkinson)의 "The Grammar of Graphics"는 1999년 첫 출간된 이후 **데이터 그래픽(data graphics)**에 많은 영향을 주어 `ggplot2`, Polaris → Tableau, Vega-Lite 등의 형태로 우리 곁에 다가왔다.
 
-"그래프 문법"은 R `ggplot2`, 타블로(Tableau)의 전신 폴라리스(Polaris), 베가-라이드(Vega-Lite)에 영감을 주었고, 데이터 시각화 분야 전반에 영향을 미쳤을 뿐만 아니라 자바스크립트 시각화 `D3.js` 발전에도 간접적인 영향을 주었다.
-그래프 문법이 짧은 기간 데이터 시각화 분야에서 미친 관계를 @fig-ggplot-evolution 에서 확인할 수 있다.
+"그래프 문법"은 R `ggplot2`, 타블로(Tableau)의 전신 폴라리스(Polaris), 베가-라이트(Vega-Lite)에 영감을 주었고, 데이터 시각화 분야 전반에 영향을 미쳤을 뿐만 아니라 자바스크립트 시각화 라이브러리 `D3.js`의 발전에도 간접적인 영향을 주었다.
+그래프 문법이 짧은 기간 동안 데이터 시각화 분야에 미친 영향을 @fig-ggplot-evolution 에서 확인할 수 있다.
 
-`ggplot2`는 정적 그래프를 생성하는데 주로 사용되지만, 추가 패키지(`plotly`, `gganimate` 등)를 사용하면 상호작용 인터랙티브 그래픽 기능도 추가할 수 있다. Vega-Lite는 상호작용 시각화를 위한 고급 문법을 제공하고, D3.js는 사용자 정의 상호작용 시각화를 구현하는데 장점이 있다.
+`ggplot2`는 주로 정적 그래프를 생성하는 데 사용되지만, 추가 패키지(`plotly`, `gganimate` 등)를 사용하면 상호작용 인터랙티브 그래픽 기능도 추가할 수 있다. Vega-Lite는 상호작용 시각화를 위한 고급 문법을 제공하고, D3.js는 사용자 정의 상호작용 시각화를 구현하는 데 장점이 있다.
 
 ```{mermaid}
 %%| label: fig-ggplot-evolution
@@ -64,7 +62,7 @@ graph TD
 
 ## 그래프 문법 {#ggplot2-steps}
 
-그래프 문법은 데이터 시각화에 있어 중요한 구조를 제공하며, 총 8개의 다른 층으로 구성된다. 각 층은 데이터를 시각적으로 표현하는 과정에서 독특한 기능과 목적을 가지고 있다. 각 층별로 데이터 즉 데이터프레임과 에스테틱(aesthetics), 기하형상(geometries), 통계적 변환(statistical transformations), 척도(scales), 좌표계(coordinate systems), 포지셔닝(positioning), 작은 창(faceting) 및 테마(theming)와 같은 그래픽 요소 결합을 정의한다. 이렇게 각기 다른 층이 결합되어 데이터의 시각적 표현이 완성된다.
+그래프 문법은 데이터 시각화에 있어 중요한 구조를 제공하며, 총 8개의 다른 층으로 구성된다. 각 층은 데이터를 시각적으로 표현하는 과정에서 독특한 기능과 목적을 가지고 있다. 각 층별로 데이터 즉 데이터프레임과 에스테틱(aesthetics), 기하형상(geometries), 통계적 변환(statistical transformations), 척도(scales), 좌표계(coordinate systems), 포지셔닝(positioning), 작은 창(faceting) 및 테마(theming)와 같은 그래픽 요소의 결합을 정의한다. 이렇게 각기 다른 층이 결합되어 데이터의 시각적 표현이 완성된다.
 
 ```{mermaid}
 graph LR
@@ -98,26 +96,26 @@ graph LR
 
 ### 데이터 {#ggplot2-steps-data}
 
-그래프 문법 `ggplot`에 데이터는 깔끔한 데이터(tidy data)를 가정한다.
-이를 위해서 기존 `wide`형태 데이터는 키값(key-value) `long` 형태로 바뀌어 준비한다.
+그래프 문법 `ggplot`에서 데이터는 깔끔한 데이터(tidy data)를 가정한다.
+이를 위해서 기존 `wide`형태의 데이터는 키값(key-value) `long` 형태로 변환하여 준비한다.
 
 ![깔끔한 데이터 `wide`, `long` 데이터](images/ggplot-data.png){#fig-ggplot-tidy-data fig-align="center" width="1291"}
 
 ### 매핑 {#ggplot2-steps-mapping}
 
-깔끔한 데이터가 준비되면 다음 단계로 칼럼에 해당되는 각 변수를 `aes()` 함수를 사용해서 에스테틱(aesthetics) `aes(x=x, y=y, color=z, ...)`와 같은 방식으로 데이터프레임 변수를 축에 매핑한다.
+깔끔한 데이터가 준비되면 다음 단계로 칼럼에 해당하는 각 변수를 `aes()` 함수를 사용해서 에스테틱(aesthetics) `aes(x=x, y=y, color=z, ...)`와 같은 방식으로 데이터프레임 변수를 축에 매핑한다.
 
 ![데이터를 그래프에 매핑](images/ggplot-mapping.png){#fig-ggplot-mapping fig-align="center" width="1492"}
 
 ### 통계량 {#ggplot2-steps-statistics}
 
-범주형 그래프를 시각화할 때는 빈도수를 통계량으로 활용해야 한다. 연속형 변수의 히스토그램을 그릴 때는 구간별 빈도수를 계산하는 것이 중요하다. 상자그림(boxplot)의 경우, 각 분위수와 중위수, 그리고 사분위수 범위를 포함하여 수염의 끝을 계산함으로써 정확한 상자그림을 시각화할 수 있다. 이러한 계산은 그래프의 정확성과 해석을 위해 필수적으로 거쳐야 되는 과정이다.
+범주형 그래프를 시각화할 때는 빈도수를 통계량으로 활용해야 한다. 연속형 변수의 히스토그램을 그릴 때는 구간별 빈도수를 계산하는 것이 중요하다. 상자그림(boxplot)의 경우, 각 분위수와 중위수, 그리고 사분위수 범위를 포함하여 수염의 끝을 계산함으로써 정확한 상자그림을 시각화할 수 있다. 이러한 계산은 그래프의 정확성과 해석을 위해 필수적으로 거쳐야 하는 과정이다.
 
 ![그래프별 기본설정 통계량](images/ggplot-stat.png){#fig-ggplot-stat fig-align="center" width="1206"}
 
 ### 척도 {#ggplot2-steps-scales}
 
-그래프에서 X축과 Y축 척도를 자동으로 인식하는 데는 한계가 있으므로, 필요에 따라 적절한 형태로 설정하는 것이 중요하다. `scale_<x, y, color, fill, ...>_<유형>()` 형식의 구문을 사용합니다. 예를 들어, Y축 변수에 로그 척도가 적합한 경우 `scale_y_log10()` 함수를 사용하여 변수의 특성에 맞는 척도로 설정한다. 마찬가지로, 변수가 날짜나 시간일 경우 `scale_x_date()` 또는 `scale_x_datetime()` 함수를 활용해 적절하게 설정하게 된다.
+그래프에서 X축과 Y축의 척도를 자동으로 인식하는 데는 한계가 있으므로, 필요에 따라 적절한 형태로 설정하는 것이 중요하다. `scale_<x, y, color, fill, ...>_<유형>()` 형식의 구문을 사용한다. 예를 들어, Y축 변수에 로그 척도가 적합한 경우 `scale_y_log10()` 함수를 사용하여 변수의 특성에 맞는 척도로 설정한다. 마찬가지로, 변수가 날짜나 시간일 경우 `scale_x_date()` 또는 `scale_x_datetime()` 함수를 활용해 적절하게 설정한다.
 
 ![`aes` 매핑된 축 척도지정](images/ggplot-scales.png){#fig-ggplot-scales fig-align="center" width="1238"}
 
@@ -135,18 +133,19 @@ graph LR
 
 ### 좌표계 {#ggplot2-steps-coordinate}
 
-좌표계(coordinate)는 `ggplot2`에서 데이터 시각화 후반 처리 단계에 해당한다. 깔끔한 데이터를 그래프에 매칭하고 시각화한 후, 상황에 따라 좌표계를 변경하는 것이 필요할 수 있다. `coord_fixed()`, `coord_polar()`, `coord_flip()` 등의 함수를 통해 특정 영역을 확대하거나, 데카르트 좌표계에서 극좌표계로 변경하고, X축과 Y축을 뒤집는 등의 작업을 수행할 수 있다. 좌표계 변경을 통해 데이터를 다양한 관점에서 보여줄 수 있게 하여 분석의 깊이를 더하고 커뮤니케이션 효과도 높이게 된다.
+좌표계(coordinate)는 `ggplot2`에서 데이터 시각화 후반 처리 단계에 해당한다. 깔끔한 데이터를 그래프에 매칭하고 시각화한 후, 상황에 따라 좌표계를 변경하는 것이 필요할 수 있다. `coord_fixed()`, `coord_polar()`, `coord_flip()` 등의 함수를 통해 특정 영역을 확대하거나, 데카르트 좌표계에서 극좌표계로 변경하고, X축과 Y축을 뒤집는 등의 작업을 수행할 수 있다. 좌표계 변경을 통해 데이터를 다양한 관점에서 보여줄 수 있게 하여 분석의 깊이를 더하고 커뮤니케이션 효과도 높일 수 있다.
 
 ![좌표계 변환](images/ggplot-coordinate.png){#fig-ggplot-coordinate fig-align="center" width="982"}
 
 ### 분위기 풍 {#ggplot2-steps-theme}
 
-테마, 분위기 풍(theme)은 `ggplot2`에서 그래프 외양을 다듬는 중요한 단계다. 이 단계는 데이터 시각화 과정과 직접적인 연관이 없으며, 대신 그래프 외형적인 부분을 개선하는 역할을 한다. 여기서는 적절한 색상 팔레트를 적용하고 글꼴을 변경하는 등의 작업이 수행한다. 이러한 조정 작업은 그래프의 전반적인 미적 품질을 향상시켜 결과물의 이해도와 시각적 매력을 증가시키는 중요한 역할을 한다.
+테마, 분위기 풍(theme)은 `ggplot2`에서 그래프 외양을 다듬는 중요한 단계다. 이 단계는 데이터 시각화 과정과 직접적인 연관이 없으며, 대신 그래프의 외형적인 부분을 개선하는 역할을 한다. 여기서는 적절한 색상 팔레트를 적용하고 글꼴을 변경하는 등의 작업을 수행한다. 이러한 조정 작업은 그래프의 전반적인 미적 품질을 향상시켜 결과물의 이해도와 시각적 매력을 증가시키는 중요한 역할을 한다.
 
 ![`tufte` 분위기 풍(theme)](images/ggplot-theme.png){#fig-ggplot-theme fig-align="center" width="1080"}
 
 ```{r}
-#| label: ggplot-theme-example
+#| label: fig-ggplot-theme-example
+#| fig-cap: "`ggplot2`에 `tufte` 분위기 풍(theme) 적용 예시"
 library(ggthemes)
 
 default_g <- mtcars %>% 
@@ -167,3 +166,14 @@ gridExtra::grid.arrange(default_g, tufte_g, nrow=1)
 
 
 ![`ggplot2` 패키지 확장](images/ggplot-extension.png){#fig-ggplot-extension fig-align="center" width="743"}
+
+## 요약
+
+그래프 문법은 데이터 시각화를 위한 체계적인 구조를 제공하며, 데이터와 에스테틱, 기하형상, 통계적 변환, 척도, 좌표계, 포지셔닝, 작은 창, 테마 등 8개 층으로 구성된다. 각 층은 데이터를 시각적으로 표현하는 과정에서 고유한 역할을 수행하며, 이를 조합하여 최종적인 그래프를 생성한다.
+
+`ggplot2`에서는 데이터를 그래프에 매핑하고, 적절한 통계량과 척도를 설정하며, 다양한 기하형상을 선택하여 데이터를 효과적으로 시각화할 수 있다. 또한 작은 창을 활용하여 다차원 데이터를 비교 분석할 수 있으며, 좌표계 변경을 통해 데이터를 다양한 관점에서 탐색할 수 있다.
+
+그래프의 외양을 다듬는 테마 설정은 데이터 시각화 과정과 직접적인 연관은 없지만, 그래프의 미적 품질과 이해도를 높이는 데 중요한 역할을 한다. 마지막으로 `ggplot` 확장 패키지를 활용하면 그래프를 조합하거나, 애니메이션 및 인터랙티브 기능을 추가하여 더욱 풍부한 시각화를 만들 수 있다.
+
+
+
