--- a/ggplot2_pattern.qmd
+++ b/ggplot2_pattern.qmd
@@ -6,16 +6,16 @@ source("_common.R")
 
 # 시각화 패턴 {#sec-ggplot-pattern}
 
-컴퓨터를 기반으로 한 시각화 시스템은 시각적으로 데이터를 표현함으로서 
+컴퓨터를 기반으로 한 시각화 시스템은 시각적으로 데이터를 표현함으로써 
 사람이 작업을 더욱 효율적으로 수행할 수 있도록 돕는다.
-시각화는 시각지능을 갖춘 인공지능을 통해 사람을 대체하는데 초점을 둔 것이라보다 
-시각화를 통해 인간능력을 보조하고 증강시키는데 유용하다.
-따라서, 완전 자동화 해결책이 존재하고 신뢰성이 있는 경우 대안이 존재하는 경우 시각화는 필요하지 않다. 하지만, 많은 분석과 개발문제에 어떤 질문을 던져야 되는지 사전에 알고 있는 경우가 적어, 명세가 분명하지 않는 경우 시각화가 적합하다.
+시각화는 시각지능을 갖춘 인공지능을 통해 사람을 대체하는 데 초점을 둔 것이 아니라 
+시각화를 통해 인간능력을 보조하고 증강시키는 데 유용하다.
+따라서, 완전 자동화 해결책이 존재하고 신뢰성이 있는 경우에는 시각화가 필요하지 않다. 하지만, 많은 분석과 개발 문제에서 어떤 질문을 던져야 하는지 사전에 알고 있는 경우가 적어, 명세가 분명하지 않을 때는 시각화가 적합하다.
 
 ## 시각화 이유 {#viz-tamara-why}
 
-시각화는 최종 데이터분석 결과를 표현하는 데이터 과학 제품과 인포그래픽으로 많은 관심을 받았다. 하지만 꼭 시각화가 데이터 과학 최종 결과물로 의미가 있는 것은 아니다. 인포그래픽과 같은 최종 결과를 제작하는 과정은 수많은 시도와 실패의 결과물로 조금씩 진전을 이뤄낸 산출물이다. 이 과정에서 데이터에 대한 충분한 이해가 필요한데 원본 데이터를 눈으로 일일이 살펴보거나 요약 통계량으로 데이터가 갖고 있는 의미를 충분히 살펴보는데는 한계가 있다. 
-원데이터를 첫번째 행부터 마지막행까지 첫번째 변수부터 마지막 변수까지 일일이 살펴보는 작업은 상당한 인지부하를 가져와 쉽게 피로를 유발한다. **인지부하(cognitive load)**를 **시각적 지각(perception)**으로 해당 작업을 바꿔 수월히 업무를 수행하는데 필수적인 기법이 **시각화(Visualization)**라고 볼 수 있다.
+시각화는 최종 데이터분석 결과를 표현하는 데이터 과학 제품과 인포그래픽으로 많은 관심을 받았다. 하지만 꼭 시각화가 데이터 과학 최종 결과물로서만 의미가 있는 것은 아니다. 인포그래픽과 같은 최종 결과를 제작하는 과정은 수많은 시도와 실패의 결과물로 조금씩 진전을 이뤄낸 산출물이다. 이 과정에서 데이터에 대한 충분한 이해가 필요한데 원본 데이터를 눈으로 일일이 살펴보거나 요약 통계량으로 데이터가 갖고 있는 의미를 충분히 살펴보는 데는 한계가 있다. 
+원데이터를 첫 번째 행부터 마지막 행까지, 첫 번째 변수부터 마지막 변수까지 일일이 살펴보는 작업은 상당한 인지부하를 가져와 쉽게 피로를 유발한다. **인지부하(cognitive load)**를 **시각적 지각(perception)**으로 해당 작업을 바꿔 수월히 업무를 수행하는 데 필수적인 기법이 **시각화(Visualization)**[@munzner2014visualization]라고 볼 수 있다.
 
 ``` {r}
 #| label: viz-motivation
@@ -27,7 +27,7 @@ datasets::women %>%
 ```
 
 
-`datasets` 패키지에 포하함된 `women` 데이터는 이미 정렬이 되어 있어서, 신장이 커짐에 따라 체중이 증가하는 것을 알 수 있지만, 데이터만 보고 이해하려면 인지적으로 데이터 한줄을 읽고 머리속으로 생각하고, 두번째 줄을 읽고 생각하고, ... 이런 과정을 반복하면서 인지적 부하가 증가하게 된다.
+`datasets` 패키지에 포함된 `women` 데이터는 이미 정렬이 되어 있어서, 신장이 커짐에 따라 체중이 증가하는 것을 알 수 있지만, 데이터만 보고 이해하려면 인지적으로 데이터 한 줄을 읽고 머리속으로 생각하고, 두 번째 줄을 읽고 생각하고, ... 이런 과정을 반복하면서 인지적 부하가 증가하게 된다.
 하지만, 시각적으로 표현하게 되면 한눈에 신장과 체중 관계를 볼 수 있다.
 
 `women` 데이터셋이 몸무게는 파운드(lbs), 신장(inch)로 되어 있어 우리나라에서 사용하는
@@ -51,7 +51,7 @@ women %>%
 앤스콤[@anscombe1973graphs]은 1973년 "Anscombe's Quartet"로 알려진 동일한 통계량을 갖는 4종류 데이터셋을 만들어서 시각화의 중요성을 일깨웠다. 
 앤스콤 데이터셋은 평균, 분산, 상관계수, 회귀직선 등 주요 통계치가 매우 유사한 4쌍의 데이터로 구성되어 있다. 그러나 이 데이터들을 그래프로 시각화했을 때 서로 완전히 다른 패턴과 관계성을 보여준다.
 
-단순히 숫자로 요약된 통계만으로는 데이터의 특성을 제대로 파악하기 어려울 수 있다는 점을 시사하는 것으로 데이터를 시각적으로 표현함으로써 숨겨진 패턴, 이상치, 추세 등을 직관적으로 발견할 수 있다. 두 변수 `x`, `y`에 대한 통계량에 대한 정보는 다음과 같다.
+단순히 숫자로 요약된 통계만으로는 데이터의 특성을 제대로 파악하기 어려울 수 있다는 점을 시사하는 것으로, 데이터를 시각적으로 표현함으로써 숨겨진 패턴, 이상치, 추세 등을 직관적으로 발견할 수 있다. 두 변수 `x`, `y`에 대한 통계량에 대한 정보는 다음과 같다.
 
 |  통계량     |   값  |
 |:-------------:|:-------:|
@@ -107,13 +107,13 @@ unlist(reg_fits$reg4)
 
 ### 데이터셋 시각화 {#viz-anscombe-viz}
 
-`anscombe` 데이터셋 기술 통계량을 통해 4종류 데이터셋이 동일한 분도를 갖고 있고
-표본추출로 보면 모집단에서 잘 추출된 표본이라고 볼수도 있으나 시각화를 통해 보면
+`anscombe` 데이터셋 기술 통계량을 통해 4종류 데이터셋이 동일한 분포를 갖고 있고
+표본추출로 보면 모집단에서 잘 추출된 표본이라고 볼 수도 있으나 시각화를 통해 보면
 전혀 다른 특성을 갖는 데이터라는 것을 한번에 알 수 있다. 즉, 가장 일반적으로 
-첫번째 데이터셋과 같은 특성이 기술통계량을 통해 존재한다는 것이 일반적이다.
-하지만, 2차식이 내재된 두 변수의 관계(두번째 데이터셋)일 수도 있으며,
-강한 선형 관계가 두변수 사이 존재하지만 튀는 관측점이 하나 존재하는 관계(세번째 데이터셋)일 수도 
-있으며 네번째 데이터세의 경우 데이터 입력과정에서 오류가 의심되는 경우(네번째 데이터셋)일 수도 있다.
+첫 번째 데이터셋과 같은 특성이 기술통계량을 통해 존재한다는 것이 일반적이다.
+하지만, 2차식이 내재된 두 변수의 관계(두 번째 데이터셋)일 수도 있으며,
+강한 선형 관계가 두 변수 사이에 존재하지만 튀는 관측점이 하나 존재하는 관계(세 번째 데이터셋)일 수도 
+있으며, 네 번째 데이터셋의 경우 데이터 입력 과정에서 오류가 의심되는 경우일 수도 있다.
 
 
 ```{r}
@@ -132,15 +132,15 @@ p4 <- ggplot(anscombe) + geom_point(aes(x4, y4), color = "darkorange", size = 3)
 gridExtra::grid.arrange(p1, p2, p3, p4, ncol=2, top = "앤스컴 콰르텟(Anscombe's Quartet)")
 ```
 
-시각화는 데이터를 이해하고 통찰력을 얻는데 매우 중요한 도구이다. 기본적인 그래프 유형을 넘어, 데이터 특성과 전달하고자 하는 메시지에 맞는 효과적인 그래프를 만드는 것이 중요하다. 
+시각화는 데이터를 이해하고 통찰력을 얻는 데 매우 중요한 도구이다. 기본적인 그래프 유형을 넘어, 데이터 특성과 전달하고자 하는 메시지에 맞는 효과적인 그래프를 만드는 것이 중요하다. 
 
 `ggplot2` 문법을 활용하여 6가지 고급 그래프를 제작하는 방법을 살펴본다. 시계열 데이터에 라벨을 추가하는 방법, 막대그래프에 그룹별 색상을 적용하는 기법, 추세선에 강조와 라벨을 더하는 방법도 알아본다. 또한 롤리팝 그래프, 아령 그래프, 경사 그래프 등 데이터 비교와 변화를 효과적으로 나타내는 그래프들도 코드와 함께 상세히 살펴본다.
 
 ## 라벨 붙은 시계열  {#gghighlight-timeseries}
 
-시계열 데이터를 제작하게 되면 추세를 파악할 수 있지만 결국 그래서 가장 최근 값이 어떻게 되는지 관심이 많다.
-이런 사용자 요구를 맞추는데 시계열 데이터 마지막 시점에 라벨값을 붙이게 되면 가독성도 좋아진다.
-기본적인 작업흐름은 데이터셋에서 가장 최근 관측점을 뽑아서 별도 데이터프레임으로 저장하고 
+시계열 데이터를 제작하게 되면 추세를 파악할 수 있지만 결국 가장 최근 값이 어떻게 되는지에 대한 관심이 많다.
+이런 사용자 요구를 맞추기 위해 시계열 데이터 마지막 시점에 라벨값을 붙이게 되면 가독성도 좋아진다.
+기본적인 작업 흐름은 데이터셋에서 가장 최근 관측점을 뽑아서 별도 데이터프레임으로 저장하고 
 이를 `geom_text()` 혹은 `geom_text_repel()` 함수를 사용해서 해결한다.[^blogr]
 
 [^blogr]: BLOGR [Label line ends in time series with ggplot2](https://drsimonj.svbtle.com/label-line-ends-in-time-series-with-ggplot2) 코드를 참조하여 `ggplot` 코드가 완성되었다.
@@ -174,7 +174,7 @@ datasets::Orange %>%
 
 ## 막대그래프 그룹별 색상  {#gghighlight-barplot-color}
 
-RStudio를 거쳐 IBM에서 근무하고 있는 Alison Presmanes Hill 의 GitHub 저장소에 공개된 TV 시리즈 데이터를 사용해서 막대그래프를 작성할 때 그룹별 색상을 적용하여 가시성을 높인다. TV 시리즈별 색상을 달리할 경우 `RColorBrewer` 패키지 생상 팔레트를 범주형에 맞춰 각 시리즈별로 가장 잘 구분될 수 있도록 색상을 칠해 시각화를 한다.
+RStudio를 거쳐 IBM에서 근무하고 있는 Alison Presmanes Hill의 GitHub 저장소에 공개된 TV 시리즈 데이터를 사용해서 막대그래프를 작성할 때 그룹별 색상을 적용하여 가시성을 높인다. TV 시리즈별 색상을 달리할 경우 `RColorBrewer` 패키지 색상 팔레트를 범주형에 맞춰 각 시리즈별로 가장 잘 구분될 수 있도록 색상을 칠해 시각화한다.
 
 
 ```{r}
@@ -219,8 +219,8 @@ ratings_bonanza1 %>%
 시각화의 백미는 아무래도 대조와 비교를 통해 강한 인상을 주는 것이다.
 앞선 `ratings` TV 시리즈 시청자 평가 데이터를 대상으로 추세선에 강조를 넣고 라벨 텍스트도 넣어 
 하이라이트 강조 그래프를 작성해보자.
-`geom_line()`을 두개 포함시켜 강조하고하는 색상을 별도로 지정하고 선굵기도 달리한다.
-라벨도 동일한 방법으로 `geom_text()`를 두개 포함시켜 강조하고자하는 색상과 글꼴크기도 달리 지정한다.
+`geom_line()`을 두 개 포함시켜 강조하고자 하는 색상을 별도로 지정하고 선 굵기도 달리한다.
+라벨도 동일한 방법으로 `geom_text()`를 두 개 포함시켜 강조하고자 하는 색상과 글꼴 크기도 달리 지정한다.
 
 ```{r}
 #| label: fig-best-viz-trend-line
@@ -246,15 +246,14 @@ ratings %>%
 
 ## 롤리팝 그래프 {#lollipop-color}
 
-롤리팝(Lollipop) 사탕 그래프는 막대그래프와 클리블랜드 점그래프를 합성한 것으로 한축에는 연속형, 다른 한축에는 범주형을 두고 사용자의 관심을 점그래프로 집중시키는데 효과적이다. 단순히 막대그래프를 제작하는 것과 비교하여 임팩트있는 시각화를 가능하게 한다.
+롤리팝(Lollipop) 사탕 그래프는 막대그래프와 클리블랜드 점그래프를 합성한 것으로 한 축에는 연속형, 다른 한 축에는 범주형을 두고 사용자의 관심을 점그래프로 집중시키는 데 효과적이다. 단순히 막대그래프를 제작하는 것과 비교하여 임팩트 있는 시각화를 가능하게 한다.
 
-제작순서는 막대그래프 &rarr; 점그래프 &rarr; 롤리팝 그래프로 뼈대 골격을 만들어 나간다.
-대략 골격이 제작되고 나면 외양과 필요한 경우 값도 텍스트로 넣어 시각화 제품을 완성한다.
+제작 순서는 막대그래프 &rarr; 점그래프 &rarr; 롤리팝 그래프로 뼈대 골격을 만들어 나간다.
+대략적인 골격이 제작되고 나면 외양과 필요한 경우 값도 텍스트로 넣어 시각화 제품을 완성한다.
 롤리팝 사탕 그래프를 작성할 때 `geom_point()`를 사용해서 롤리팝 사탕을 제작하고,
-`geom_sgement()` 함수를 사용해서 사탕 막대를 그린다. 이때 막대 사탕의 시작과 끝을 
-시작은 `x`, `y`에 넣어주고 끝은 `xend`와 `yend`에 넣어 마무리한다.
+`geom_segment()` 함수를 사용해서 사탕 막대를 그린다. 이때 막대 사탕의 시작은 `x`, `y`에 넣어주고 끝은 `xend`와 `yend`에 넣어 마무리한다.
 
-데이터는 `ggplot2`에 내장된 `midwest` 데이터를 사용하자. `midwest` 데이터셋은
+데이터는 `ggplot2`에 내장된 `midwest` 데이터를 사용한다. `midwest` 데이터셋은
 2000년 미국 중서부 센서스 데이터로 인구통계 조사가 담겨있다.
 `percollege` 변수는 카운티(우리나라 군에 해당) 별 대학졸업비율을 나타낸다.
 
@@ -303,9 +302,8 @@ ohio_lollipop_g <- ohio_top15 %>%
 cowplot::plot_grid(ohio_barplot_g, ohio_dotplot_g, ohio_lollipop_g, nrow=1)
 ```
 
-한발더 나아가, 평균값에서 얼마나 차이가 있느냐를 롤리팝 그래프로 시각화하는 패턴이 많이 사용된다.
-이를 위해서, 앞서와 마찬가지로 15개 카운티를 뽑아내고 평균을 구하고 평균이상, 평균이하에 대한 요인(factor)도 함께 만들어낸다.
-반영한다.
+한 발 더 나아가, 평균값에서 얼마나 차이가 있느냐를 롤리팝 그래프로 시각화하는 패턴이 많이 사용된다.
+이를 위해서, 앞서와 마찬가지로 15개 카운티를 뽑아내고 평균을 구하고 평균 이상, 평균 이하에 대한 요인(factor)도 함께 만들어낸다.
 
 ```{r}
 #| label: best-viz-lolli-pop-polish
@@ -352,8 +350,8 @@ ohio %>%
 
 ## 아령 그래프 {#gghighlight-dumbbel-plot}
 
-두시점을 비교하여 전후를 비교한다던가 두 지역을 비교할 때 아령 그래프는 매우 효과적이다.
-TV 시리즈별로 회차를 달리하여 첫번째와 가장 마지막 시청자수를 비교하여 시각화하는데 **아령(dumbbell) 그래프**가 적절한 예시가 될 것으로 보인다. 이를 위해서 `ggplot()`에 들어가는 자료형을 미리 준비하고 이에 맞춰 `geom_line()`과 `geom_point()`를 결합시켜 시각화한다.
+두 시점을 비교하여 전후를 비교한다든가 두 지역을 비교할 때 아령 그래프는 매우 효과적이다.
+TV 시리즈별로 회차를 달리하여 첫 번째와 가장 마지막 시청자 수를 비교하여 시각화하는데 **아령(dumbbell) 그래프**가 적절한 예시가 될 것으로 보인다. 이를 위해서 `ggplot()`에 들어가는 자료형을 미리 준비하고 이에 맞춰 `geom_line()`과 `geom_point()`를 결합시켜 시각화한다.
 
 ```{r}
 #| label: fig-best-viz-dumbbell-plot
@@ -388,11 +386,11 @@ ratings_dumbbell_df %>%
 ## 경사 그래프 {#gghighlight-slope-plot}
 
 아령 그래프를 제작한 동일한 데이터를 [`터프티(tufte)` 스타일 경사그래프](https://www.edwardtufte.com/bboard/q-and-a-fetch-msg?msg_id=0003nk)로 구현하면 
-시즌별 첫회와 최종회 시청자수 비교를 좀더 직관적으로 만들 수 있다.
+시즌별 첫 회와 최종회 시청자 수 비교를 좀 더 직관적으로 만들 수 있다.
 
-`ggplot`의 기본기능을 활용하여 경사그래프를 시각화하고 강조하고자 하는 시즌을 
-색상을 달리하여 표현한다. 이를 통해 1~7번째 시즌은 1회차 시청율은 낮으나 최종회는 높게 
-마무리된 것을 알 수 있고, 더불어 시즌이 진행될 수록 1회차 시청율도 높아지고 있었다.
+`ggplot`의 기본 기능을 활용하여 경사그래프를 시각화하고 강조하고자 하는 시즌을 
+색상을 달리하여 표현한다. 이를 통해 1~7번째 시즌은 1회차 시청률은 낮으나 최종회는 높게 
+마무리된 것을 알 수 있고, 더불어 시즌이 진행될수록 1회차 시청률도 높아지고 있었다.
 하지만 8번째 시즌은 다른 시즌과 달리 낮게 시작했고 최종회 시청률도 크게 나아지지 않은 것을 
 한눈에 파악할 수 있다.
 
@@ -418,7 +416,7 @@ ratings_dumbbell_df %>%
               aes(label = paste0(series, " 시즌")), family = "MaruBuri", hjust = 1.2) 
 ```
 
-경사그래프를 제작하고는 싶으나 전반적으로 시간이 더 필요하신 분을 위해 
+경사그래프를 제작하고 싶으나 전반적으로 시간이 더 필요한 분을 위해 
 [`slopegraph`](https://github.com/leeper/slopegraph) 패키지가 있다.
 
 `slopegraph`는 Base 그래픽을 기본으로 삼고 있어 자료구조도 `rownames`를 갖는 전통적인 데이터프레임이다.
@@ -444,8 +442,8 @@ ratings_dumbbell_df %>%
 ```
 
 `slopegraph()` 함수 대신 `ggslopegraph()` 함수를 사용하게 되면 `ggplot()`으로도 시각화를 할 수 있다.
-`slopegraph()` 함수는 자료구조가 직관적이라 처음 시각화를 하는 분에게 적절한 듯 보인다.
-따라서, 앞서 `ggplot` 기반 경사그래프를 제작하고자 하는 경우 `ggslopegraph()`을 통해서도 `ggplot` 나머지 기능을 그대로 적용 가능하다.
+`slopegraph()` 함수는 자료구조가 직관적이라 처음 시각화를 하는 분에게 적절해 보인다.
+따라서, 앞서 `ggplot` 기반 경사그래프를 제작하고자 하는 경우 `ggslopegraph()`을 통해서도 `ggplot`의 나머지 기능을 그대로 적용할 수 있다.
 
 ```{r}
 #| label: fig-viz-slope-plot-ggslopegraph-series
@@ -462,7 +460,13 @@ ratings_dumbbell_df %>%
 ```
 
 
+## 요약
 
+효과적인 데이터 시각화를 위해 `ggplot2` 문법을 활용하여 6가지 고급 그래프 제작 방법을 살펴보았다. 먼저, 시계열 데이터에 라벨을 추가하여 최근 값을 강조하는 방법과 막대그래프에 그룹별 색상을 적용하여 가시성을 높이는 기법을 알아보았고, 추세선에 강조와 라벨을 더하여 차별화된 메시지를 전달하는 방법도 살펴보았다.
+
+롤리팝 그래프는 막대그래프와 점그래프를 결합한 형태로, 사용자의 관심을 점그래프로 집중시키는 데 효과적이다. 롤리팝 그래프를 활용하여 평균값과의 차이를 비교하는 시각화 패턴도 많이 사용된다. 아령 그래프는 두 시점 혹은 두 지역을 비교할 때 매우 효과적인 그래프로, TV 시리즈별 첫 회와 마지막 회의 시청자 수 비교에 적절한 예시로 제시되었다.
+
+마지막으로 경사 그래프는 아령 그래프와 유사하지만 좀 더 직관적인 형태로 시즌별 첫 회와 최종회 시청자 수 비교를 나타낼 수 있다. `ggplot`의 기본 기능을 활용하여 경사그래프를 시각화하고 강조하고자 하는 부분을 색상으로 구분하여 표현할 수 있다. 또한 `slopegraph` 패키지를 사용하면 Base 그래픽을 기반으로 한 경사그래프를 쉽게 제작할 수 있다.
 
 
 
