fix reference bug

--- a/references.bib
+++ b/references.bib
@@ -191,8 +191,8 @@ using {palmerpenguins}},
 }
 
 @book{ChatGPT2023,
-  title={POD 챗GPT 유닉스 쉘: 데이터 과학 자동화 도구},
-  author={이광춘 · 신종화},
+  title={챗GPT 유닉스 쉘: 데이터 과학 자동화 도구},
+  author={이광춘·신종화},
   publisher={한국 R 사용자회},
   year={2023},
   month={8},
