--- a/models.qmd
+++ b/models.qmd
@@ -106,7 +106,7 @@ x <- cbind(1, x)
 solve(t(x) %*% x) %*% t(x) %*% y
 ```
 
-이를 `lm` 함수를 사용해서 다시 풀면 위에서 선형대수 수식으로 계산한 것과 동일함을 확인하게 된다.
+이를 `lm` 함수를 사용해서 다시 풀면 위에서 선형대수 수식으로 계산한 것과 동일함을 확인할 수 있다.
 
 ``` {r}
 #| label: r-galton-hegith-lm
@@ -123,8 +123,8 @@ lm(childHeight ~ midparentHeight, data=GaltonFamilies) %>% coef()
 이 방식에서는 인간의 경험과 지식이 중요한 역할을 하며, 고객의 특별한 요구사항을 충족하기 위해 맞춤형 모델을 개발한다. 
 이러한 방식을 간략히 살펴보면, 각 고객의 고유한 필요에 따라 제품이나 서비스를 특별히 설계하고 생산하는 것이 핵심이다.
 
-이번 장에서 전통적인 통계모형 제작하는 과정을 살펴보고 [-@sec-model-building]장에서 다른 방식의 
-모형개발과정을 살펴보자.
+이번 장에서는 전통적인 통계모형을 제작하는 과정을 살펴보고 [-@sec-model-building]장에서 다른 방식의 
+모형개발과정을 살펴본다.
 
 데이터 준비 단계에서 모의시험 데이터를 생성한다. 
 독립변수 $x$는 1부터 100까지의 연속적인 수열이며, 종속변수 $y$는 $x^2$에 노이즈를 추가한 값으로 정의한다. 
@@ -136,7 +136,7 @@ lm(childHeight ~ midparentHeight, data=GaltonFamilies) %>% coef()
 모형 적합 단계에서는 먼저, 선형회귀 모델을 사용하여 $y$를 $x$로 예측한다. 
 적합된 선형 모형 결과를 출력하고, 적합된 모델과 잔차를 시각적으로 확인한다. 
 $y = \beta_0 + \beta_1 x + \beta_2 x^2$ 형태를 가진 2차 회귀 모형을 적합시킨다. 
-$x^2$ 항을 데이터프레임에 추가해서 2차 회귀 모델을 적합한 후, 결과를 출력하고, 적합된 모형과 잔차를 시각적으로 확인한다. 기본모형과 최종모형 사이 수많은 가설생성과 검증 절차가 진행되어 데이터를 가장 잘 설명하는 모형을 최종 선택하게 된다.
+$x^2$ 항을 데이터프레임에 추가하여 2차 회귀 모델을 적합한 후, 결과를 출력하고, 적합된 모형과 잔차를 시각적으로 확인한다. 기본모형과 최종모형 사이에는 수많은 가설생성과 검증 절차가 진행되어 데이터를 가장 잘 설명하는 모형을 최종 선택하게 된다.
 
 ::: panel-tabset
 ### 데이터 확인
@@ -220,8 +220,22 @@ abline(h=0, type='3', col='blue')
 `predict`와 `forecast`는 둘 다 '예측하다'라는 의미로 사용되지만, 
 차이는 명확하다. `predict`는 보다 확정적인 결과에 대한 예측에 초점을 맞추는 반면, `forecast`는 미래의 불확실한 사건에 대한 확률적인 추정에 중점을 둔다.
 
-`predict`는 과학, 사회학, 심리학 등에서 사용되ㅕ 일반적으로 특정 사건이나 결과가 일어날 것이라고 말하는 데 사용된다. 예를 들어, 기계학습 모형이 특정 데이터를 바탕으로 결과를 '예측(predict)'하는 경우가 대표적이다. 특정 조건이나 상황에서 특정 결과가 일어날 것이라고 하는, 비교적 구체적이고 확정적인 예측을 내포한다.
+`predict`는 과학, 사회학, 심리학 등에서 사용되며 일반적으로 특정 사건이나 결과가 일어날 것이라고 말하는 데 사용된다. 예를 들어, 기계학습 모형이 특정 데이터를 바탕으로 결과를 '예측(predict)'하는 경우가 대표적이다. 특정 조건이나 상황에서 특정 결과가일어날 것이라고 하는, 비교적 구체적이고 확정적인 예측을 내포한다.
 
 반면, `forecast`는 주로 기상학, 경제학, 재무학 등에서 사용되며, 미래의 사건이나 조건에 대한 확률적인 추정을 의미한다. `forecast`는 불확실성과 확률적인 요소를 포함한 예측을 가리키며, 예를 들어 날씨 예보나 경제 성장률 예측 등에서 사용되기 때문에 특정 사건이 발생할 '가능성'이나 '확률'을 중시한다.
 
 :::
+
+## 요약
+
+
+모형은 복잡한 현실 세계를 추상화하고 단순화하여 현상의 본질을 이해하는 데 도움을 준다. 갤톤의 부모와 자식의 신장 데이터를 통해 회귀분석이라는 강력한 도구를 사용하여 변수 간의 관계를 파악하는 방법을 배웠다. 
+
+데이터 준비, 탐색적 데이터 분석, 모형 적합의 단계를 거치며 최적의 모형을 찾아가는 과정은 데이터 과학자에게 있어 핵심적인 역량이다. 
+이 과정에서 우리는 도메인 지식과 통계학적 지식을 동원하여 데이터를 이해하고, 가설을 세우고 검증하며, 모형의 성능을 평가하고 개선해 나간다. 
+
+모형 구축은 단순히 주어진 데이터에 알고리즘을 적용하는 것 이상의 의미를 갖는다. 현실에 대한 이해를 바탕으로, 데이터에 담긴 정보를 추출하고 새로운 통찰을 발견하는 지적 탐구의 과정이며 데이터로부터 학습한 모형을 활용하여 미래를 예측하고 의사결정을 지원함으로써 실질적인 가치를 창출할 수 있다.
+
+앞으로 데이터 과학 분야가 빠르게 발전하고 그 영향력이 확대됨에 따라, 통계 모형의 역할도 더욱 커질 것으로 기대된다. 데이터 과학자로서 모형 구축 과정에서 맞닥뜨리는 도전 과제들을 슬기롭게 헤쳐나가는 한편, 
+모형의 한계를 인식하고 윤리적 책임을 다할 줄 아는 성숙한 자세를 갖추어야 할 것이다.
+
